--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,22 +1,27 @@
 <div class="navbar navbar-light">
-  <div class="navbar-content navbar-nav d-flex flex-row justify-content-around align-items-center">
+
+  <div class="navbar-content col-12 col-lg-6 navbar-nav d-flex flex-row justify-content-around align-items-center">
+
     <div class="nav-item">
       <%= link_to "Home", root_path, class: "nav-link" %>
     </div>
+
     <div class="nav-item">
       <%= link_to "About Me", about_me_path, class: "nav-link" %>
     </div>
+
     <div class="nav-item">
       <%= link_to "Projects", projects_path, class: "nav-link" %>
     </div>
+
     <div class="nav-item">
       <%= link_to "CV", cv_path, class: "nav-link" %>
     </div>
+
     <div class="nav-item">
-      <%= link_to "Degrees", degrees_path, class: "nav-link" %>
+      <%= link_to "Contact", contact_path, class: "nav-link", id: "test-btn" %>
     </div>
-    <div class="nav-item">
-      <%= link_to "Contact", contact_path, class: "nav-link" %>
-    </div>
+
   </div>
+
 </div>
