--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$back: rgb(222, 211, 209);
+$one: #42819F;
+$two: #86AA7D;
+$three: #CBB396;
+$four: #555234;
+$five: #4D280F;
