--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,3 +1,18 @@
+<div class="projects-container">
 
+  <div class="projects-header">
+    <h2>Differents projects I have worked on.</h2>
+  </div>
 
-<h2>They trusted me to doing their app.</h2>
+  <div class="projects-body">
+
+  </div>
+
+  <div class="projects-footer col-12 col-lg-6">
+    <h3>You enjoyed what I already did and want to work together ?</h3>
+    <%= link_to contact_path do %>
+      <button>Contact Me</button>
+    <% end %>
+  </div>
+
+</div>
