--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="nav-item">
-      <%= link_to "Contact", contact_path, class: "nav-link", id: "test-btn" %>
+      <%= link_to "Contact", contact_path, class: "nav-link", id: "contact-btn" %>
     </div>
 
   </div>
