--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -21,14 +21,14 @@
 
   <div class="new-contact-body">
     <%= simple_form_for(@contact) do |f| %>
-      <%= f.input :name, label: false, placeholder: "Tony Blair" %>
+      <%= f.input :name, label: false, placeholder: "My Name(s)" %>
       <%= f.input :email, label: false, placeholder: "example@gmail.com" %>
       <%= f.input :phone_number, label: false, placeholder: "+33123456789" %>
-      <%= f.input :brand, label: false, placeholder: "Tommy Hilfiger" %>
-      <%= f.input :website, label: false, placeholder: "www.google.com" %>
-      <%= f.input :product, as: :radio_buttons, collection: Contact::PRODUCT %>
+      <%= f.input :brand, label: false, placeholder: "My Brand" %>
+      <%= f.input :website, label: false, placeholder: "www.example.com" %>
+      <%= f.input :product, as: :radio_buttons, label: "What you need", collection: Contact::PRODUCT %>
       <%= f.input :description, label: false, as: :text, placeholder: "Description" %>
-      <%= f.input :known, as: :radio_buttons, label: false, collection: Contact::SOCIAL %>
+      <%= f.input :known, as: :radio_buttons, label: "How you met me", collection: Contact::SOCIAL %>
       <%= f.submit "Send" %>
     <% end %>
   </div>
