--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,18 +1,81 @@
 <%= render "shared/navbar" %>
 
-<div class="projects-container">
+<div class="projects-container d-flex flex-column align-items-center">
 
-  <div class="projects-header">
-    <h2>Differents projects I have worked on.</h2>
+  <div class="projects-header d-flex justify-content-center align-items-center">
+    <h2 id="highlight"><strong>Differents project</strong></h2>
+    <h2> I have worked on.</h2>
   </div>
 
-  <div class="projects-body">
+  <div class="projects-body d-flex">
+
+    <div class="project-block-left d-flex flex-column">
+
+      <div class="project-content">
+
+        <div class="project-header d-flex jsutify-content-start">
+          <h3>Project 1</h3>
+        </div>
+
+        <div class="project-body">
+
+          <div class="project-body-content d-flex align-items-center">
+
+            <div class="project-display d-flex">
+              <h4>Phone</h4>
+            </div>
+
+            <div class="project-wallpaper">
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="project-footer">
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="project-block-right d-flex flex-column">
+
+      <div class="project-content">
+
+        <div class="project-header d-flex jsutify-content-start">
+          <h3>Project 2</h3>
+        </div>
+
+        <div class="project-body">
+
+          <div class="project-body-content d-flex align-items-center">
+
+            <div class="project-wallpaper">
+            </div>
+
+            <div class="project-display d-flex">
+              <h4>Phone</h4>
+              <h4>Laptop</h4>
+              <h4>Tablet</h4>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="project-footer">
+        </div>
+
+      </div>
+
+    </div>
 
   </div>
 
   <div class="projects-footer col-12 col-lg-6">
     <h3>You enjoyed what I already did and want to work together ?</h3>
-    <%= link_to contact_path do %>
+    <%= link_to contacts_path do %>
       <button>Contact Me</button>
     <% end %>
   </div>
